Worked on assignment 1.

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,19 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "%load_ext dotenv\n",
+    "%dotenv\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gwmch\\miniconda3\\envs\\dsi_participant\\lib\\site-packages\\dask\\dataframe\\_pyarrow_compat.py:17: FutureWarning: Minimal version of pyarrow will soon be increased to 14.0.1. You are using 11.0.0. Please consider upgrading.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import dask\n",
     "dask.config.set({'dataframe.query-planning': True})\n",
@@ -65,7 +75,8 @@
     "from glob import glob\n",
     "\n",
     "# Write your code below.\n",
-    "\n"
+    "PRICE_DATA = os.getenv(\"PRICE_DATA\")\n",
+    "parquet_files = glob(PRICE_DATA+\"/**/*.parquet/*.parquet\")"
    ]
   },
   {
@@ -95,6 +106,27 @@
    "outputs": [],
    "source": [
     "# Write your code below.\n",
+    "import warnings \n",
+    "warnings.filterwarnings('ignore') # mute warning messages\n",
+    "\n",
+    "dd_px = dd.read_parquet(parquet_files).set_index(\"ticker\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "dd_feats = (dd_px.groupby('ticker', group_keys=False).apply(\n",
+    "        lambda x: x.assign(Close_lag_1 = x['Close'].shift(1))\n",
+    ").assign(\n",
+    "        returns = lambda x: x['Close']/x['Close_lag_1'] -1\n",
+    ").assign(\n",
+    "        hi_lo_range = lambda x:x['High']-x['Low']\n",
+    "))\n",
     "\n"
    ]
   },
@@ -111,12 +143,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "df_feats = dd_feats.compute()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_feats.groupby('ticker', group_keys=False).apply(\n",
+    "    lambda x: x.assign(rolling_avg = x['returns'].rolling(10).mean())\n",
+    ")\n"
    ]
   },
   {
@@ -128,7 +172,13 @@
     "+ Was it necessary to convert to pandas to calculate the moving average return?\n",
     "+ Would it have been better to do it in Dask? Why?\n",
     "\n",
-    "(1 pt)"
+    "(1 pt)\n",
+    "\n",
+    "No, it's not necessary.\n",
+    "\n",
+    "It would've been better to do it in Dask because Dask can do calculations in parallel, which will speed up the calculations.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -185,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
